--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,12 @@ PROJECT("SceneLib2")
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules/")
 
+find_package( OpenCV )
+if( OpenCV_FOUND )
+    include_directories( ${OpenCV_INCLUDE_DIRS} )
+    link_libraries( ${OpenCV_LIBS} )
+endif()
+
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 # Overide with cmake -DCMAKE_BUILD_TYPE=Release {dir}
