--- a/data/SceneLib2.cfg
+++ b/data/SceneLib2.cfg
@@ -19,7 +19,8 @@
 
 # to use the same image sequences used by SceneLib 1.0
 input.mode = 0;
-input.name = ../../../../_DatasetOffline/cam_datasets/TestSeqMonoSLAM;
+# input.name = ../../../../_DatasetOffline/cam_datasets/TestSeqMonoSLAM;
+input.name = /home/cg/dev_sdb/datasets/scenelib/TestSeqMonoSLAM;
 
 cam.width = 320;
 cam.height = 240;
